--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -2,19 +2,19 @@ name: Heroku Deployment
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main ]                          # pipeline will trigger on push of branch 'main'
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest                      # will run on ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2                 # code will checkout on ubuntu latest
     - name: Deploy to Heroku
-      uses: AkhileshNS/heroku-deploy@v3.12.12
+      uses: AkhileshNS/heroku-deploy@v3.12.12   # deployment on heroku
       with:
-        # This will be used for authentication. You can find it in your heroku homepage account settings
+        # This will be used for authentication. HEROKU token saved as secrets in github
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
        # Email that you use with heroku
         heroku_email: gaurav7tr@gmail.com
@@ -23,27 +23,27 @@ jobs:
    
   compile:
 
-     runs-on: ubuntu-latest
-     name: Running Java compile
+     runs-on: ubuntu-latest                      
+     name: Running Java compile                  # Java Compilation
 
      steps:
-     - uses: actions/checkout@v2
+     - uses: actions/checkout@v2                 # code checkout
      - name: Set up JDK 1.8
-       uses: actions/setup-java@v1
+       uses: actions/setup-java@v1               # setup jdk 1.8
        with:
          java-version: 1.8
      - name: Compile code
-       run: mvn compile
+       run: mvn compile                          # maven complie step
   test:
 
       runs-on: ubuntu-latest
-      name: Running tests
+      name: Running tests                        # java test step
       needs: compile
       steps:
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v2              # code checkout
         - name: Set up JDK 1.8
           uses: actions/setup-java@v1
           with:
             java-version: 1.8
-        - name: Run unit tests
+        - name: Run unit tests                   # junit tests
           run: mvn test
